--- a/css/style-2-small.css
+++ b/css/style-2-small.css
@@ -8,7 +8,7 @@
 }
 
 .project {
-  min-width:400px;
+  min-width:355px;
   max-width : 45vw;
   padding-top: 2%;
 }
